# OpenSentry-MotionNode

./: .env.example  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  mediamtx.yml  mosquitto.conf  setup.sh  teardown.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: main.cpp
